crates/service/tests/inlay_hint/snapshots/features__inlay_hint__ending_only.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 6,
      "character": 13
    },
    "label": "(func $f)",
    "paddingLeft": true
  },
  {
    "position": {
      "line": 6,
      "character": 12
    },
    "label": "(block $block)",
    "paddingLeft": true
  },
  {
    "position": {
      "line": 6,
      "character": 11
    },
    "label": "(loop $loop)",
    "paddingLeft": true
  },
  {
    "position": {
      "line": 6,
      "character": 11
    },
    "label": "(if $if)",
    "paddingLeft": true
  }
]
