crates/service/tests/inlay_hint/snapshots/features__inlay_hint__field.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 4,
      "character": 18
    },
    "label": "(mut i32)",
    "kind": 1,
    "paddingLeft": true
  }
]
