crates/service/tests/inlay_hint/snapshots/features__inlay_hint__func_end.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 4,
      "character": 5
    },
    "label": "(func $name)",
    "paddingLeft": true
  },
  {
    "position": {
      "line": 2,
      "character": 9
    },
    "label": "(;0;)",
    "paddingLeft": true
  }
]
