crates/service/tests/inlay_hint/snapshots/features__inlay_hint__global.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 3,
      "character": 29
    },
    "label": "funcref",
    "kind": 1,
    "paddingLeft": true
  }
]
