crates/service/tests/inlay_hint/snapshots/features__inlay_hint__if_end.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 2,
      "character": 7
    },
    "label": "(;0;)",
    "paddingLeft": true
  },
  {
    "position": {
      "line": 3,
      "character": 11
    },
    "label": "(if $b)",
    "paddingLeft": true
  }
]
