crates/service/tests/inlay_hint/snapshots/features__inlay_hint__local.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 2,
      "character": 9
    },
    "label": "(;0;)",
    "paddingLeft": true
  },
  {
    "position": {
      "line": 2,
      "character": 16
    },
    "label": "(;0;)",
    "paddingLeft": true
  },
  {
    "position": {
      "line": 3,
      "character": 25
    },
    "label": "i64",
    "kind": 1,
    "paddingLeft": true
  }
]
