crates/service/tests/inlay_hint/snapshots/features__inlay_hint__loop_end.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 3,
      "character": 13
    },
    "label": "(loop $b)",
    "paddingLeft": true
  }
]
