crates/service/tests/inlay_hint/snapshots/features__inlay_hint__param.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 3,
      "character": 25
    },
    "label": "f32",
    "kind": 1,
    "paddingLeft": true
  }
]
