crates/service/tests/inlay_hint/snapshots/features__inlay_hint__param_via_type_def.snap
---
source: crates/service/tests/inlay_hint/mod.rs
expression: response
---
[
  {
    "position": {
      "line": 5,
      "character": 16
    },
    "label": "f32",
    "kind": 1,
    "paddingLeft": true
  }
]
